update: short list design at desktop view

--- a/app/views/dashboard/_profile_card.html.erb
+++ b/app/views/dashboard/_profile_card.html.erb
@@ -1,4 +1,4 @@
-<div id="mentor-card-<%=mentor.id%>" class="bg-[#FFFFFF] flex-col border-slate-300 rounded-lg max-w-[438px]">
+<div id="mentor-card-<%=mentor.id%>" class="bg-[#FFFFFF] flex-col border-slate-300 rounded-lg min-x[438px] max-w-[438px]">
   <div class="flex justify-between pt-6 px-6 items-center">
     <div class="flex gap-5">
       <img src=<%= asset_path('sample_img/mentor_sample.png') %> alt="mentor_profile_picture" class="size-14 object-cover rounded-lg border">
