--- a/app/views/dashboard/_short_list_confirm.html.erb
+++ b/app/views/dashboard/_short_list_confirm.html.erb
@@ -12,8 +12,8 @@
       </div>
     </div>
     <div class="flex flex-col justify-center gap-2">
-      <button id="confirm-submit" class="bg-[#202020] text-xs text-white px-4 py-2 rounded">Yes, Confirm</button>
-      <button id="cancel-submit" class="bg-transparent text-xs text-[#202020] border border-[#202020] px-4 py-2 rounded">No, Cancel</button>
+      <button id="confirm-submit" class="bg-[#202020] text-xs text-white px-4 py-2 rounded hover:scale-105">Yes, Confirm</button>
+      <button id="cancel-submit" class="bg-transparent text-xs text-[#202020] border border-[#202020] px-4 py-2 rounded hover:scale-105">No, Cancel</button>
     </div>
   </div>
 </div>
