--- a/app/views/dashboard/_shortlist_card_desktop.html.erb
+++ b/app/views/dashboard/_shortlist_card_desktop.html.erb
@@ -1,5 +1,5 @@
 <%# Don't delete, but it can be styled. For js message%>
-<div id="shortlist-section" class="p-6 bg-white rounded-[0.75rem] shadow-md w-full h-full">
+<div id="shortlist-section" class="p-6 bg-white rounded-[0.75rem] shadow-sm w-full h-full">
   <div class="flex justify-between mb-3">
     <div>
       <div class="flex items-center gap-5">
