update: icon change

--- a/app/views/dashboard/_shortlist_card_desktop.html.erb
+++ b/app/views/dashboard/_shortlist_card_desktop.html.erb
@@ -19,5 +19,5 @@
       Submit
     </button>
   </div>
-  <div id="short-list-card" class="flex gap-2 justify-start items-center overflow-x-auto bg-center bg-no-repeat bg-[url('<%= asset_path('bg/dragndrop.svg') %>')] h-[4.3rem] w-[100%] rounded-[0.3rem] border-[#D9D9D9] border-2 border-dotted p-2"></div>
+  <div id="short-list-card" class="flex gap-2 justify-start items-center overflow-x-auto bg-center bg-no-repeat bg-[url('<%= asset_path('bg/dragndrop_desk.svg') %>')] h-[4.3rem] w-[100%] rounded-[0.3rem] border-[#D9D9D9] border-2 border-dotted p-2"></div>
 </div>
