--- a/app/views/dashboard/_shortlist_card_mobile.html.erb
+++ b/app/views/dashboard/_shortlist_card_mobile.html.erb
@@ -8,7 +8,7 @@
       Click to add mentors and drag to rank your top 5.
     </p>
   </div>
-  <div id="short-list-card-m" class="flex justify-start items-center gap-2 pl-2 bg-center bg-no-repeat bg-[url('<%= asset_path('bg/dragdrop_bg.svg') %>')] h-[7rem] w-[100%] overflow-hidden rounded-[0.3rem] border-[#D9D9D9] border-2 border-dotted">
+  <div id="short-list-card-m" class="flex justify-start items-center gap-2 pl-2 bg-center bg-no-repeat bg-[url('<%= asset_path('bg/dragndrop_mb.svg') %>')] h-[7rem] w-[100%] overflow-hidden rounded-[0.3rem] border-[#D9D9D9] border-2 border-dotted">
   </div>
 
   <button id="submit-shortlist-button-m"
