update: card styling

--- a/app/views/dashboard/_available_mentors.html.erb
+++ b/app/views/dashboard/_available_mentors.html.erb
@@ -7,7 +7,7 @@
   </p>
 
   <!-- Grid of mentors -->
-  <div class="grid sm:grid-cols-1 lg:grid-cols-2 2xl:grid-cols-3 gap-3 rounded-[0.55rem] max-h-[26.7rem] overflow-y-auto">
+  <div class="grid sm:grid-cols-1 lg:grid-cols-2 2xl:grid-cols-3 gap-3 rounded-[0.55rem] h-full max-h-[26.7rem] overflow-y-auto">
     <% available_mentors_count = 0 %>
     <% mentors_data.each do |mentor| %>
       <%# TODO: Refactor section below (might need to modify user methods in model or create new scope) %>
