--- a/app/views/dashboard/_mentee_shortlist_desktop.html.erb
+++ b/app/views/dashboard/_mentee_shortlist_desktop.html.erb
@@ -15,7 +15,7 @@
         Available Mentors
       </h1>
       <!-- Grid of mentors -->
-      <div id="mentor-list-section" class="grid sm:grid-cols-1 lg:grid-cols-2 2xl:grid-cols-3 gap-3 rounded-[0.55rem] min-w-[55rem] max-h-[18rem] overflow-y-auto">
+      <div id="mentor-list-section" class="grid sm:grid-cols-1 lg:grid-cols-2 2xl:grid-cols-3 gap-3 rounded-[0.55rem] max-h-[18rem] overflow-y-auto">
         <% available_mentors_count = 0 %>
         <% mentors_data.each do |mentor| %>
           <%# TODO: Refactor section below (might need to modify user methods in model or create new scope) %>
