--- a/app/views/home/_brand.html.erb
+++ b/app/views/home/_brand.html.erb
@@ -1,30 +1,34 @@
+<div class="flex flex-col items-center mb-3">
+  <h1 class="font-bold text-[2.5rem]">Why it works</h1>
+  <p class="text-center w-1/2 mt-3 text-base">Let’s see how Mente can support you on your mentorship journey</p>
+</div>
 <div class="grid grid-cols-1 md:grid-cols-3 gap-6 p-8">
   <div class="md:col-span-2 grid grid-cols-1 md:grid-cols-2 gap-6">
-    <div class="bg-white shadow-lg rounded-lg p-6 flex flex-col">
+    <div class="bg-white shadow-sm rounded-[0.625rem] p-6 flex flex-col hover:scale-105">
       <div class="mb-4">
         <img src="<%= asset_path("icon/users.svg") %>" alt="users" class="w-9 h-9">
       </div>
-      <h3 class="text-xl font-semibold mb-2">Tailored Mentors</h3>
-      <p class="text-gray-600 mb-4">
+      <h3 class="text-[1.2rem] text-[#202020] font-semibold mb-2">Tailored Mentors</h3>
+      <p class="text-[#676666] mb-4">
         Mentors are reviewed by their Mentees based on metrics like responsiveness, skill match, and personality fit to ensure a high-quality experience for all parties.
       </p>
     </div>
-    <div class="bg-white shadow-lg rounded-lg p-6 flex flex-col">
+    <div class="bg-white shadow-sm rounded-[0.625rem] p-6 flex flex-col hover:scale-105">
       <div class="mb-4">
         <img src="<%= asset_path("icon/heart.svg") %>" alt="users" class="w-9 h-9">
       </div>
-      <h3 class="text-xl font-semibold mb-2">Precise Matching</h3>
-      <p class="text-gray-600 mb-4">
+      <h3 class="text-[1.2rem] text-[#202020] font-semibold mb-2">Precise Matching</h3>
+      <p class="text-[#676666]- mb-4">
         <strong>MentE</strong> accounts for both Mentee areas of interest and individual needs to determine the best match. Mentees can shortlist their favorite mentors then let our system take care of the rest.
       </p>
     </div>
-    <div class="md:col-span-2 bg-white shadow-lg rounded-lg p-6 flex flex-col md:flex-row justify-between">
+    <div class="md:col-span-2 bg-white shadow-sm rounded-[0.625rem] p-6 flex flex-col md:flex-row justify-between items-center	 hover:scale-105">
       <div class="flex-1">
         <div class="mb-4">
           <img src="<%= asset_path("icon/chart.svg") %>" alt="chart" class="w-9 h-9">
         </div>
-        <h3 class="text-xl font-semibold mb-2">Insightful Management</h3>
-        <p class="text-gray-600 mb-4">
+        <h3 class="text-[1.2rem] text-[#202020] font-semibold mb-2">Insightful Management</h3>
+        <p class="text-[#676666] mb-4">
           Keep track of all your programs data through your dashboard. Manage your team, view charts based on areas of interest, and see progress updates all in one spot.
         </p>
       </div>
@@ -33,14 +37,16 @@
       </div>
     </div>
   </div>
-  <div class="bg-white shadow-lg rounded-lg p-6 flex flex-col">
-    <div class="mb-4">
-      <img src="<%= asset_path("icon/growth.svg") %>" alt="users" class="w-9 h-9">
+  <div class="bg-white shadow-sm rounded-[0.625rem] p-6 flex flex-col justify-between hover:scale-105">
+    <div>
+      <div class="mb-4">
+        <img src="<%= asset_path("icon/growth.svg") %>" alt="users" class="w-9 h-9">
+      </div>
+      <h3 class="text-[1.2rem] text-[#202020] font-semibold mb-2">Growth Focused</h3>
+      <p class="text-[#676666] mb-4">
+        Mentor support provides insights for personal and professional growth and facilitates the refinement of skills allowing Mentees to go from good to great.
+      </p>
     </div>
-    <h3 class="text-xl font-semibold mb-2">Growth Focused</h3>
-    <p class="text-gray-600 mb-4">
-      Mentor support provides insights for personal and professional growth and facilitates the refinement of skills allowing Mentees to go from good to great.
-    </p>
-    <img src=<%= asset_path("sample_img/growth_focused.png") %> alt="Growth Focused Image" class="w-[332px] h-[300px] flex-shrink-0 rounded-lg">
+    <img src="<%= asset_path("sample_img/growth_focused.png") %>" alt="Growth Focused Image" class="w-[332px] h-[300px] flex-shrink-0 rounded-lg">
   </div>
 </div>
