--- a/app/views/home/_hero.html.erb
+++ b/app/views/home/_hero.html.erb
@@ -1,9 +1,10 @@
 <div class="flex flex-col items-center justify-center w-full relative">
   <div class="gradient gradient-left"></div>
   <div class="gradient gradient-right"></div>
-  <h1 class="font-light text-center w-full md:w-3/4 lg:w-1/2 text-5xl md:text-6xl mt-16">
-    Transform potential into progress through <span class="font-bold">MentE</span>
-  </h1>
+  <div class="font-light text-center w-full mt-16 mb-5 text-5xl">
+    Transform <span class="italic">potential</span><br>into progress through<br>
+  </div>
+  <div class="font-bold text-6xl hover:animate-bounce 1s">MentE</div>
   <div class="mt-8">
     <button class="bg-gray-900 text-white px-6 py-3 text-s rounded-md hover:scale-105 transition">
       <% if user_signed_in? %>
