--- a/app/views/matches/_match.html.erb
+++ b/app/views/matches/_match.html.erb
@@ -1,27 +1,21 @@
 <div id="<%= dom_id match %>">
   <p>
-    <strong>Matches:</strong>
-    <%= match.matches %>
-  </p>
-
-  <p>
     <strong>Mentor:</strong>
-    <%= match.mentor_id_id %>
+    <%= match.mentor_id %>
   </p>
 
   <p>
     <strong>Mentee:</strong>
-    <%= match.mentee_id_id %>
+    <%= match.mentee_id %>
   </p>
 
   <p>
     <strong>Cohort:</strong>
-    <%= match.cohort_id_id %>
+    <%= match.cohort_id %>
   </p>
 
   <p>
     <strong>Active:</strong>
     <%= match.active %>
   </p>
-
 </div>
