--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -1,14 +1,17 @@
-<p style="color: green"><%= notice %></p>
+<div class="mt-[10rem]">
+  <p style="color: green"><%= notice %></p>
 
-<h1>Matches</h1>
+  <h1>Matches</h1>
 
-<div id="matches">
-  <% @matches.each do |match| %>
-    <%= render match %>
-    <p>
-      <%= link_to "Show this match", match %>
-    </p>
-  <% end %>
+  <div id="matches">
+    <% @matches.each do |match| %>
+      <%= render match %>
+      <p>
+        <%= link_to "Show this match", match %>
+      </p>
+    <% end %>
+  </div>
+
+  <%= link_to "New match", new_match_path %>
+
 </div>
-
-<%= link_to "New match", new_match_path %>
