--- a/app/views/dashboard/_admin_dashboard.html.erb
+++ b/app/views/dashboard/_admin_dashboard.html.erb
@@ -5,6 +5,9 @@
   <main class="w-[calc(100%-22rem)] p-6">
     <h1 class="text-2xl font-bold">Hi <%= current_user.name %></h1>
     <p class="text-gray-500">Welcome back to the Mentorship dashboard</p>
+     <button id="openModalBtn" class="text-gray-500 flex items-center float-right hover:text-gray-700" onclick="openModal('new-admin-modal')">
+      <i class="fa-solid fa-plus pr-2"></i>New Admin
+  </button>
     <!-- Program Stats -->
     <div class="grid grid-cols-4 gap-4 mt-6">
       <div class="p-6 bg-white shadow rounded-lg">
