--- a/app/views/program_admins/_form.html.erb
+++ b/app/views/program_admins/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @program_admin, url: url_for(controller: 'dashboard', action: 'create_program_admin'), class: "contents") do |form| %>
+<%= form_with(model: @program_admin, url: create_program_admin_path, class: "contents") do |form| %>
   <% if @program_admin.errors.any? %>
     <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mt-3">
       <h2><%= pluralize(@program_admin.errors.count, "error") %> prohibited this program_admin from being saved:</h2>
