--- a/app/views/dashboard/_admin_dashboard.html.erb
+++ b/app/views/dashboard/_admin_dashboard.html.erb
@@ -3,7 +3,7 @@
     <%= render partial: "admin_sidebar" %>
   <!-- Main Content -->
   <main class="w-[calc(100%-22rem)] p-6">
-    <h1 class="text-2xl font-bold">Hi <%= current_user.name %></h1>
+    <h1 class="text-2xl font-bold">Hi <%= current_user.first_name %>!</h1>
     <p class="text-gray-500">Welcome back to the Mentorship dashboard</p>
     <!-- Program Stats -->
     <div class="grid grid-cols-3 gap-4 mt-6">
