update: profile icon

--- a/app/views/profile/_profile.html.erb
+++ b/app/views/profile/_profile.html.erb
@@ -71,8 +71,8 @@
         <div class="bg-[#FFFFFF] flex-col space-y-3 py-5 border-slate-300 rounded-lg px-5">
           <b class="text-lg text-[#202020] font-bold">Mentee Capacity</b>
           <div>
-            <div class="flex gap-1 mb-2">
-              <img src="<%= asset_path('icon/users.svg') %>" alt="office" class="max-w-15 max-h-15">
+            <div class="flex gap-1 mb-2 items-center">
+              <img src="<%= asset_path('icon/users.svg') %>" alt="office" class="max-w-6 max-h-6">
               <p class="text-xs text-[#202020]"><b><%= @current_mentee_count %>/<%= @capacity_cap %></b> mentees</p>
             </div>
           </div>
