--- a/app/views/dashboard/_meetings_card.html.erb
+++ b/app/views/dashboard/_meetings_card.html.erb
@@ -1,4 +1,4 @@
-<div class="bg-[#FFFFFF] flex flex-col gap-2 border-slate-300 rounded-lg min-x[438px] max-w-[438px] p-5">
+<div class="bg-[#FFFFFF] flex flex-col gap-2 border-slate-300 rounded-lg p-5">
   <div class="flex justify-between">
     <h1 class="text-2xl font-semibold text-[#202020] mb-2"> Meetings </h1>
     <div class="flex items-center gap-1">
@@ -9,17 +9,17 @@
   <div class="flex flex-col gap-3 items-center">
     <p class="text-[#202020] font-medium text-[0.9rem]">You’re moving smoothly! Already a third of the way there. 🚀</p>
     <div class="flex items-center">
-      <div class="w-[3rem] h-[3rem] rounded-[2rem] bg-[#E1E1E1] font-[#202020] text-[1rem] font-medium flex items-center justify-center">1</div>
+      <div class="w-[3rem] h-[3rem] rounded-[2rem] bg-[#E1E1E1] font-[#202020] text-[1rem] font-medium flex items-center justify-center hover:scale-105 hover:bg-[#B3B3B3] hover:text-[#fff]">1</div>
       <div class="w-[1rem] border-t border-[#DCDCDC]"></div>
-      <div class="w-[3rem] h-[3rem] rounded-[2rem] bg-[#E1E1E1] font-[#202020] text-[1rem] font-medium flex items-center justify-center">2</div>
+      <div class="w-[3rem] h-[3rem] rounded-[2rem] bg-[#E1E1E1] font-[#202020] text-[1rem] font-medium flex items-center justify-center hover:scale-105 hover:bg-[#B3B3B3] hover:text-[#fff]">2</div>
       <div class="w-[1rem] border-t border-[#DCDCDC]"></div>
-      <div class="w-[3rem] h-[3rem] rounded-[2rem] bg-[#E1E1E1] font-[#202020] text-[1rem] font-medium flex items-center justify-center">3</div>
+      <div class="w-[3rem] h-[3rem] rounded-[2rem] bg-[#E1E1E1] font-[#202020] text-[1rem] font-medium flex items-center justify-center hover:scale-105 hover:bg-[#B3B3B3] hover:text-[#fff]">3</div>
       <div class="w-[1rem] border-t border-[#DCDCDC]"></div>
-      <div class="w-[3rem] h-[3rem] rounded-[2rem] bg-[#E1E1E1] font-[#202020] text-[1rem] font-medium flex items-center justify-center">4</div>
+      <div class="w-[3rem] h-[3rem] rounded-[2rem] bg-[#E1E1E1] font-[#202020] text-[1rem] font-medium flex items-center justify-center hover:scale-105 hover:bg-[#B3B3B3] hover:text-[#fff]">4</div>
       <div class="w-[1rem] border-t border-[#DCDCDC]"></div>
-      <div class="w-[3rem] h-[3rem] rounded-[2rem] bg-[#E1E1E1] font-[#202020] text-[1rem] font-medium flex items-center justify-center">5</div>
+      <div class="w-[3rem] h-[3rem] rounded-[2rem] bg-[#E1E1E1] font-[#202020] text-[1rem] font-medium flex items-center justify-center hover:scale-105 hover:bg-[#B3B3B3] hover:text-[#fff]">5</div>
       <div class="w-[1rem] border-t border-[#DCDCDC]"></div>
-      <div class="w-[3rem] h-[3rem] rounded-[2rem] bg-[#E1E1E1] font-[#202020] text-[1rem] font-medium flex items-center justify-center">6</div>
+      <div class="w-[3rem] h-[3rem] rounded-[2rem] bg-[#E1E1E1] font-[#202020] text-[1rem] font-medium flex items-center justify-center hover:scale-105 hover:bg-[#B3B3B3] hover:text-[#fff]">6</div>
     </div>
   </div>
   <div class="flex flex-col gap-1.5 mt-5">
