--- a/app/views/dashboard/_mentee_dashboard.html.erb
+++ b/app/views/dashboard/_mentee_dashboard.html.erb
@@ -10,7 +10,7 @@
     <%= render 'mentee_dashboard_af', mentors_data: mentors_data %>
   <% else %>
     <%= render 'mentee_dashboard_bf', mentors_data: mentors_data %>
-  <% end %><
+  <% end %>
 <% end %>
 
 <%= render 'short_list_confirm' %>
