--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -2,7 +2,7 @@
   <% if @role == "mentor" %>
     <h1>Welcome, Mentor!</h1>
     <% @mentors_data.each do |mentor| %>
-      <h3><%= mentor.user_id %></h3>
+      <h3><%= mentor.id %></h3>
     <% end %>
   <% elsif @role == "mentee" %>
     <%= render partial: "mentee_dashboard", locals: { mentors_data: @mentors_data } %>
