--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,7 +8,7 @@
     <ul class="flex space-x-14 text-[#202020] font-normal">
       <li><a href="/" class="hover:text-[#898989]">Home</a></li>
       <li><a href="/dashboard/mentee" class="hover:text-[#898989]">Mentors</a></li>
-      <li class="text-[#898989] inactive">Meeting</li>
+      <li><a href="/meetings" class="hover:text-[#898989]">Meeting</a></li>
       <li class="text-[#898989] inactive">Survey</li>
     </ul>
   </div>
